add index as a route

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     block title
-      title Example title
+      title better isms
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block scripts
@@ -10,5 +10,3 @@ html(lang="en")
         script(src="/javascripts/global.js")
     block content
         some default content
-    block footer
-        Copyright 2017 - Hello World For Beginners
