--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,41 +16,30 @@ a {
 	position:relative;
 }
 
-#userList {
+#ismList {
 	margin:0 0 30px 0;
 }
-	#userList table {
+	#ismList table {
 		border-collapse:separate;
 		border-spacing:1px;
 		background:#CCC;
 	}
-		#userList table th {
+		#ismList table th {
 			background:#EEE;
 			font-weight:600;
 			padding:10px 20px;
 			text-align:center;
 		}
-		#userList table tbody {
+		#ismList table tbody {
 			padding:0; margin:0;
 			border-collapse:collapse;
 			border-spacing:0px;
 		}
-			#userList table td {
+			#ismList table td {
 				background:#FFF;
 				padding:5px 10px;
 				text-align:center;
 			}
-
-#userInfo {
-	width:250px;
-	position:absolute;
-	top:0; left:0;
-}
-	#userInfo p {
-		padding:15px;
-		border:1px solid #CCC;
-		background:rgba(80,120,255,0.05);
-	}
 
 fieldset {
 	border:0;
