--- a/views/index.jade
+++ b/views/index.jade
@@ -15,6 +15,7 @@ block content
                     th category
                     th name
                     th body
+                    th tags
                     th U
                     th D
                 tbody
@@ -29,6 +30,8 @@ block content
                 input#inputName(type='text', placeholder='name')
                 br
                 input#inputBody(type='text', placeholder='body')
+                br
+                input#inputTags(type='text', placeholder='tags')
                 br
                 button#btnAddIsm Add Ism
         // /ADD ISM
@@ -46,6 +49,8 @@ block content
                 input#updateName(type='text', placeholder='name')
                 br
                 input#updateBody(type='text', placeholder='body')
+                br
+                input#updateTags(type='text', placeholder='tags')
                 br
                 button#btnUpdateIsm Update Ism
         // /UPDATE ISM
