--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,29 +19,44 @@ a {
 #ismList {
 	margin:0 0 30px 0;
 }
-	#ismList table {
-		border-collapse:separate;
-		border-spacing:1px;
-		background:#CCC;
-	}
-		#ismList table th {
-			background:#EEE;
-			font-weight:600;
-			padding:10px 20px;
-			text-align:center;
-		}
-		#ismList table tbody {
-			padding:0; margin:0;
-			border-collapse:collapse;
-			border-spacing:0px;
-		}
-			#ismList table td {
-				background:#FFF;
-				padding:5px 10px;
-				text-align:center;
-			}
+
+#ismList table {
+	border-collapse:separate;
+	border-spacing:1px;
+	background:#CCC;
+}
+
+#ismList table th {
+	background:#EEE;
+	font-weight:600;
+	padding:10px 20px;
+	text-align:center;
+}
+
+#ismList table tbody {
+	padding:0; margin:0;
+	border-collapse:collapse;
+	border-spacing:0px;
+}
+
+#ismList table td {
+	background:#FFF;
+	padding:5px 10px;
+	text-align:center;
+}
 
 fieldset {
 	border:0;
 	padding:0; margin:0;
+}
+
+.textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
 }
