--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html(lang="en")
     block title
       title better isms
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/form.css')
   body
     block scripts
         script(src="https://code.jquery.com/jquery-1.10.0.min.js")
