--- a/views/index.jade
+++ b/views/index.jade
@@ -23,8 +23,8 @@ block content
         // /ISM LIST
 
         // ADD ISM
-        h2 Add Ism
-        #addIsm
+        h2 Ism
+        #addOrUpdateIsm
           .form-container-wrapper
             fieldset.form-container
                 input#inputSource(type='text', placeholder='book title, etc').form-field
@@ -37,29 +37,7 @@ block content
                 br
                 textarea#inputComments(type='textarea', placeholder='comments', rows=10).form-field
                 br
-                button#btnAddIsm Add Ism
+                button#btnAddOrUpdateIsm Add or Update Ism
         // /ADD ISM
-        br
-        br
-        // UPDATE ISM
-        h2 Update Ism
-        #updateIsm
-          .form-container-wrapper
-            fieldset.form-container
-                strong ism to update:
-                |  <span id='ismBeingUpdated'></span>
-                br
-                input#updateSource(type='text', placeholder='book title, etc').form-field
-                br
-                input#updateNumber(type='text', placeholder='page number').form-field
-                br
-                input#updateTags(type='text', placeholder='tags').form-field
-                br
-                textarea#updateQuote(type='textarea', placeholder='quote or note', rows='10').form-field
-                br
-                textarea#updateComments(type='textarea', placeholder='comments', rows=10).form-field
-                br
-                button#btnUpdateIsm Update Ism
-        // /UPDATE ISM
 
     // /WRAPPER
