add clear button

--- a/views/index.jade
+++ b/views/index.jade
@@ -38,6 +38,7 @@ block content
                 textarea#inputComments(type='textarea', placeholder='comments', rows=10).form-field
                 br
                 button#btnAddOrUpdateIsm Add or Update Ism
+                button#btnClearIsm Clear
         // /ADD ISM
 
     // /WRAPPER
