--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,3 +34,25 @@ fieldset {
   background-color: #f8f8f8;
   resize: none;
 }
+
+
+@media (max-width: 979px) {
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+}
+
+@media (min-width: 768px) {
+}
+
+@media (max-width: 767px) {
+}
+
+@media (min-width: 980px) {
+}
+
+@media (min-width: 1200px) {
+}
+
+@media (max-width: 480px) {
+}
