add modal demo code

--- a/views/index.jade
+++ b/views/index.jade
@@ -35,3 +35,18 @@ block content
   // /WRAPPER
 
   a(href="#") back to top
+
+  hr
+  br
+  br
+  button#modalBtn Open Modal
+  .modal#myModal
+    .modal-content
+      .modal-header
+        span.modal-close &times;
+        h2 Modal Header
+      .modal-body
+        p Some text in the Modal Body
+        p Some other text...
+      .modal-footer
+        h3 Modal Footer
