--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,9 +5,11 @@ html(lang="en")
       title better isms
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/form.css')
+    link(rel='stylesheet', href='/stylesheets/modal.css')
   body
     block scripts
         script(src="https://code.jquery.com/jquery-1.10.0.min.js")
         script(src="/javascripts/global.js")
+        script(src="/javascripts/modal.js")
     block content
         some default content
