center modal form

--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -1,17 +1,21 @@
 /* Modal Content */
 .modal-form {
-    overflow: auto;
-    position: relative;
     background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    /*border: 1px solid #888;*/
-    width: 80%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+
+    /* animation bits */
+    position: relative;
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
-    animation-duration: 0.4s
+    animation-duration: 0.4s;
+
+    /* centers the form, when combined with wrapper modal class text-align: center; */
+    display: inline-block;
+}
+
+.modal {
+  text-align: center;
 }
 
 /* Add Animation */
