--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,8 @@ a {
 
 fieldset {
 	border:0;
-	padding:0; margin:0;
+	padding:0;
+  margin:0;
 }
 
 .textarea {
@@ -35,24 +36,8 @@ fieldset {
   resize: none;
 }
 
-
-@media (max-width: 979px) {
-}
-
-@media (min-width: 768px) and (max-width: 979px) {
-}
-
 @media (min-width: 768px) {
 }
 
 @media (max-width: 767px) {
-}
-
-@media (min-width: 980px) {
-}
-
-@media (min-width: 1200px) {
-}
-
-@media (max-width: 480px) {
 }
