--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -21,16 +21,16 @@
 
 /* Add Animation */
 @-webkit-keyframes animatetop {
-  from {top: -300px; opacity: 0}
+  from {top: -25em; opacity: 0}
   to {top: 0; opacity: 1}
 }
 
 @keyframes animatetop {
-  from {top: -300px; opacity: 0}
+  from {top: -25em; opacity: 0}
   to {top: 0; opacity: 1}
 }
 
-@media (max-width: 767px) {
+@media (max-device-width: 767px) {
   .modal {
     width: 100%;
   }
