--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,15 @@
 body {
-  padding: 30px;
+  padding: 2em;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 h2 {
-	margin:0 0 .5em 0;
+	margin: 0 0 .5em 0;
 }
 
 a {
   color: #00B7FF;
+  font: 10em;
 }
 
 #wrapper {
@@ -16,28 +17,11 @@ a {
 }
 
 #ismList {
-	margin:0 0 30px 0;
+	margin: 0 0 2em 0;
 }
 
-fieldset {
-	border:0;
-	padding:0;
-  margin:0;
+@media (min-device-width: 768px) {
 }
 
-.textarea {
-  width: 100%;
-  height: 150px;
-  padding: 12px 20px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: #f8f8f8;
-  resize: none;
-}
-
-@media (min-width: 768px) {
-}
-
-@media (max-width: 767px) {
+@media (max-device-width: 767px) {
 }
