--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
 
-  button#newIsm New Ism
+  button#newIsm.submit-button New Ism
 
   // Wrapper
   #wrapper
@@ -29,8 +29,8 @@ block content
               br
               textarea#inputComments(type='textarea', placeholder='comments', rows=10).form-field
               br
-              button#btnAddOrUpdateIsm Add or Update Ism
-              button#btnClearIsm Clear
+              button#btnAddOrUpdateIsm.submit-button Add or Update Ism
+              button#btnClearIsm.submit-button Clear
     // /ISM FORM
 
     // ISM LIST
@@ -39,6 +39,5 @@ block content
       isms
     // /ISM LIST
 
+    a(href="#").submit-button back to top
   // /WRAPPER
-
-  a(href="#") back to top
