--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -93,7 +93,7 @@
   text-shadow: #e9f3fb 0 1px 0;
   color: #000000;
   font-family: helvetica, serif;
-  padding: 1em 1.5em;
+  padding: .5em;
   font-size: 1.5em;
   text-decoration: none;
   vertical-align: middle;
