add filter field and button; capture field contents when button clicked

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,11 @@ block content
   h1= title
 
   button#newIsm.submit-button New Ism
+  br
+  br
+  br
+  input#filter(type='text', placeholder='type your filter query').form-field
+  button#applyFilter.submit-button Go
 
   // Wrapper
   #wrapper
