add handling for single-element tag lists which get added to the document as a string; generate a tagCloud in addition to adding the taglist to the tableContent; remove filter field - might explore DSL slash query language options later

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,8 +7,7 @@ block content
   br
   br
   br
-  input#filter(type='text', placeholder='type your filter query').form-field
-  button#applyFilter.submit-button Go
+  #tagCloud
 
   // Wrapper
   #wrapper
