add login routing

--- a/views/index.jade
+++ b/views/index.jade
@@ -22,6 +22,8 @@ block content
     // /LOGIN FORM
 
     button#newIsm.submit-button New Ism
+    button#login.submit-button Login
+    button#readCookie.submit-button Read Cookie
     br
     br
     br
