--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html(lang="en")
   body
     block scripts
         script(src="https://code.jquery.com/jquery-1.10.0.min.js")
+        script(src="/javascripts/cookie.js")
         script(src="/javascripts/global.js")
     block content
         some default content
