add logout and element clearing

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,6 +15,7 @@ block content
         #loginForm
           .form-container-wrapper
             fieldset.form-container
+              h1 Please log in to complete this action
               input#inputUsername(type='text', placeholder='username').form-field
               br
               input#inputPassword(type='password', placeholder='password').form-field
@@ -22,7 +23,7 @@ block content
     // /LOGIN FORM
 
     button#newIsm.submit-button New Ism
-    button#readCookie.submit-button Read Cookie
+    button#logout.submit-button Logout
     br
     br
     br
