add logged out modal

--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -1,5 +1,5 @@
 /* Modal Content */
-.modal-form {
+.modal-container {
   background-color: #fefefe;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 
@@ -9,6 +9,8 @@
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s;
+
+  padding: .5em;
 
   /* centers the form, when combined with wrapper modal class text-align: center; */
   display: inline-block;
