--- a/views/index.jade
+++ b/views/index.jade
@@ -16,6 +16,16 @@ block content
         h1 You have been logged out
     // /LOGGED OUT TOAST
 
+    // ISM DELETED TOAST
+    .modal#ismDeletedModal
+      br
+      br
+      br
+      br
+      .modal-container
+        h1 Ism deleted
+    // /ISM DELETED TOAST
+
     // LOGIN FORM
     .modal#loginModal
       br
