--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block content
       br
       br
       br
-      .modal-container
+      .modal-container.modal-toast
         h1 You have been logged out
     // /LOGGED OUT TOAST
 
@@ -22,7 +22,7 @@ block content
       br
       br
       br
-      .modal-container
+      .modal-container.modal-toast
         h1 Ism deleted
     // /ISM DELETED TOAST
 
@@ -60,7 +60,6 @@ block content
       br
       br
       .modal-container
-        h2#addOrUpdateIsmHeader Ism
         #addOrUpdateIsm
           .form-container-wrapper
             fieldset.form-container
