add login button; wrap logout button hide and show in generic button hide and show functions

--- a/views/index.jade
+++ b/views/index.jade
@@ -46,6 +46,7 @@ block content
 
     button#newIsm.submit-button New Ism
     button#logout.submit-button Logout
+    button#login.submit-button Login
     br
     br
     br
