--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,6 +33,10 @@ a {
   border-radius: 4px;
 }
 
+.required {
+  text-align: left;
+}
+
 @media (min-device-width: 768px) {
   body {
     padding: 2em;
