--- a/views/index.jade
+++ b/views/index.jade
@@ -64,15 +64,20 @@ block content
         #addOrUpdateIsm
           .form-container-wrapper
             fieldset.form-container
-              input#inputSource(type='text', placeholder='book title, etc').form-field
+              span *&nbsp;
+              input#inputSource(type='text', placeholder='book title, etc', value='').form-field
               br
-              input#inputNumber(type='text', placeholder='page number').form-field
+              span *&nbsp;
+              input#inputNumber(type='text', placeholder='page number', value='').form-field
               br
-              input#inputTags(type='text', placeholder='tags').form-field
+              span *&nbsp;
+              input#inputTags(type='text', placeholder='tags', value='').form-field
               br
-              textarea#inputQuote(type='textarea', placeholder='quote or note', rows=10).form-field
+              span *&nbsp;
               br
-              textarea#inputComments(type='textarea', placeholder='comments', rows=10).form-field
+              textarea#inputQuote(type='textarea', placeholder='quote or note', rows=10, value='').form-field
+              br
+              textarea#inputComments(type='textarea', placeholder='comments', rows=10, value='').form-field
               br
               button#btnAddOrUpdateIsm.submit-button Add or Update Ism
               button#btnClearIsm.submit-button Clear
