add source cloud and source filtering

--- a/views/index.jade
+++ b/views/index.jade
@@ -50,6 +50,8 @@ block content
     br
     br
     br
+    #sourceCloud
+    br
     #tagCloud
     br
     button#showAll.submit-button(value='') Show All
