refactor into separate files

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,10 @@ html(lang="en")
         script(src="https://code.jquery.com/jquery-1.10.0.min.js")
         script(src="/javascripts/cookie.js")
         script(src="/javascripts/auth.js")
+        script(src="/javascripts/tagCloud.js")
+        script(src="/javascripts/sourceCloud.js")
+        script(src="/javascripts/ismFormHandler.js")
+        script(src="/javascripts/modal.js")
         script(src="/javascripts/global.js")
     block content
         some default content
