refactor further into separate files

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,9 @@ html(lang="en")
         script(src="/javascripts/sourceCloud.js")
         script(src="/javascripts/ismFormHandler.js")
         script(src="/javascripts/modal.js")
+        script(src="/javascripts/contentHandler.js")
+        script(src="/javascripts/addOrUpdate.js")
+        script(src="/javascripts/delete.js")
         script(src="/javascripts/global.js")
     block content
         some default content
