add source as a header to the add or update ism form

--- a/views/index.jade
+++ b/views/index.jade
@@ -65,10 +65,8 @@ block content
       .modal-container
         #addOrUpdateIsm
           .form-container-wrapper
+            h1#inputSource
             fieldset.form-container
-              span *&nbsp;
-              input#inputSource(type='text', placeholder='book title, etc', value='').form-field
-              br
               span *&nbsp;
               input#inputNumber(type='text', placeholder='page number', value='').form-field
               br
