add author to source

--- a/views/index.jade
+++ b/views/index.jade
@@ -76,7 +76,7 @@ block content
       .modal-container
         #addOrUpdateIsm
           .form-container-wrapper
-            h1#inputSource
+            h1#sourceTitle
             fieldset.form-container
               span *&nbsp;
               input#inputNumber(type='text', placeholder='page number', value='').form-field
