--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,7 @@ html(lang="en")
         script(src="/javascripts/modal.js")
         script(src="/javascripts/contentHandler.js")
         script(src="/javascripts/addOrUpdate.js")
+        script(src="/javascripts/addSource.js")
         script(src="/javascripts/delete.js")
         script(src="/javascripts/global.js")
     block content
