add Add Source button to select source list; convert modal hiding to a loop over a list

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,6 +26,19 @@ block content
         h1 Ism deleted
     // /ISM DELETED TOAST
 
+    // SOURCE SELECT
+    .modal#sourceSelectModal
+      br
+      br
+      br
+      br
+      .modal-container
+        .form-container-wrapper
+          h1 Add to which source?
+          #sourceListDiv
+          button#newSource.submit-button Add New Source
+    // SOURCE SELECT
+
     // ADD SOURCE FORM
     .modal#newSourceModal
       br
@@ -43,17 +56,6 @@ block content
               br
               button#btnSubmitAddSource.submit-button Add Source
     // /ADD SOURCE FORM
-
-    // SOURCE SELECT
-    .modal#sourceSelectModal
-      br
-      br
-      br
-      br
-      .modal-container
-          h1 Add to which source?
-          #sourceListDiv
-    // SOURCE SELECT
 
     // LOGIN FORM
     .modal#loginModal
@@ -74,7 +76,7 @@ block content
     // /LOGIN FORM
 
     button#newIsm.submit-button New Ism
-    button#newSource.submit-button New Source
+    button#newSource2.submit-button New Source
     button#logout.submit-button Logout
     button#login.submit-button Login
     br
