--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,10 @@ a {
   text-align: left;
 }
 
+.linksource, .linksourcefilter, .linktagfilter {
+  font-size: 1.5em;
+}
+
 @media (min-device-width: 768px) {
   body {
     padding: 2em;
