--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,7 @@ block content
       br
       .modal-container.modal-toast
         h1 You have been logged out
+        button.hideModals.submit-button Hide
     // /LOGGED OUT TOAST
 
     // ISM DELETED TOAST
@@ -24,6 +25,7 @@ block content
       br
       .modal-container.modal-toast
         h1 Ism deleted
+        button.hideModals.submit-button Hide
     // /ISM DELETED TOAST
 
     // SOURCE SELECT
@@ -32,11 +34,14 @@ block content
       br
       br
       br
-      .modal-container
-        .form-container-wrapper
-          h1 Add to which source?
-          #sourceListDiv
-          button#newSource.submit-button Add New Source
+      .modal-container.form-container
+        h1 Add to which source?
+        #sourceListDiv
+        br
+        br
+        br
+        button#newSource.submit-button Add New Source
+        button.hideModals.submit-button Hide
     // SOURCE SELECT
 
     // ADD SOURCE FORM
@@ -55,6 +60,7 @@ block content
               input#inputAuthor(type='text', placeholder='author').form-field
               br
               button#btnSubmitAddSource.submit-button Add Source
+              button.hideModals.submit-button Hide
     // /ADD SOURCE FORM
 
     // LOGIN FORM
@@ -73,6 +79,7 @@ block content
               input#inputPassword(type='password', placeholder='password').form-field
               br
               button#btnSubmitLogin.submit-button Login
+              button.hideModals.submit-button Hide
     // /LOGIN FORM
 
     button#newIsm.submit-button New Ism
@@ -113,6 +120,7 @@ block content
               br
               button#btnAddOrUpdateIsm.submit-button Add or Update Ism
               button#btnClearIsm.submit-button Clear
+              button.hideModals.submit-button Hide
     // /ISM FORM
 
     // ISM LIST
