add current filter; change Show All to Clear Filter

--- a/views/index.jade
+++ b/views/index.jade
@@ -88,12 +88,15 @@ block content
     button#login.submit-button Login
     br
     br
+    span Current Filter: 
+    span#currentFilter
+    br
     br
     #sourceCloud
     br
     #tagCloud
     br
-    button#showAll.submit-button(value='') Show All
+    button#clearFilter.submit-button(value='') Clear Filter
 
     // ISM FORM
     .modal#formModal
