add edit source button when source filter is selected

--- a/views/index.jade
+++ b/views/index.jade
@@ -90,6 +90,8 @@ block content
     br
     span Current Filter: 
     span#currentFilter
+    span 
+    span#btnEditSource.submit-button Edit
     br
     br
     #sourceCloud
