--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,8 +17,8 @@ html(lang="en")
         script(src="/javascripts/ismFormHandler.js")
         script(src="/javascripts/modal.js")
         script(src="/javascripts/contentHandler.js")
-        script(src="/javascripts/addOrUpdate.js")
-        script(src="/javascripts/addSource.js")
+        script(src="/javascripts/upsertIsm.js")
+        script(src="/javascripts/upsertSource.js")
         script(src="/javascripts/delete.js")
         script(src="/javascripts/global.js")
     block content
